# CPP_Intimetec

./: .gitignore  Abstraction.cpp  Constructor.cpp  Friend.cpp  a.out  codingGuidlines.txt
WEEK - 1/: concepts.cpp
WEEK - 1/07-07-2025/: concepts.cpp
WEEK - 1/08-07-2025/: precision.cpp
WEEK - 1/09-07-2025/: atof.cpp  switch_case.cpp
WEEK - 1/10-07-2025/: UUID.cpp  struct.cpp  union.cpp
WEEK - 1/11-07-2025/: Exception.cpp  ReturnVector.cpp
WEEK - 1/14-07-2025/: hello.s
WEEK - 1/include/: math_utils.hpp
WEEK - 1/src/: math_utils.cpp
WEEK - 2/14-07-2025/: hello.i
WEEK - 2/15-07-2025/: headerPrac.cpp  headerPrac.h  headerPracUse.cpp  main.cpp
WEEK - 2/16-07-2025/: file1.h  file2.h  guard.cpp  main.cpp
WEEK - 2/17-07-2025/: calc.cpp  calc.h  endif.cpp  main.cpp  program
WEEK - 2/18-07-2025/: extern_example  helper.cpp  main.cpp
WEEK - 3/21-07-2025/: LValueRef.cpp  Reference.cpp  dangling.cpp
WEEK - 3/22-07-2025/: 2DArray.cpp  Pointer.cpp  Traverse.cpp
WEEK - 3/23-07-2025/: dma.cpp  main.cpp  matrix.cpp  matrix.h
WEEK - 3/24-07-2025/: colMajor.cpp  staticGolbalLocal.cpp
WEEK - 3/25-07-2025/: Dangling.cpp  memoryLeak.cpp
WEEK - 3/25-07-2025/assignment/: main.cpp
WEEK - 3/25-07-2025/assignment/src/: matrix.cpp
WEEK - 4/: ptrE.cpp
WEEK - 4/1-08-25/: delete.cpp  this.cpp  this.s
WEEK - 4/28-07-25/: class.cpp
WEEK - 4/29-07-25/: access.cpp  constFunc.cpp  constref.cpp
WEEK - 4/30-07-25/: constructor.cpp  overload.cpp  prac.cpp  sizes.cpp
WEEK - 4/31-07-25/: Static.cpp  diamond.cpp  main.cpp  matrix.cpp  matrix.h
WEEK - 5/4-08-25/: constObjects.cpp  friendFunction.cpp  newDeleteOverload.cpp
WEEK - 5/5-08-25/: constInit.cpp  cprac.cpp  friend.cpp  virtualfunc.cpp
WEEK - 5/6-08-25/: virtual.cpp  virtualInsideConstructor.cpp
WEEK - 6/11-08-25/: usingGDB.cpp  virtual.cpp
WEEK - 6/12-08-25/: data.txt  exceptionInsideConstructor.cpp  fileHandling.cpp
WEEK - 6/13-08-25/: data.json  jsonParser.cpp  vsDebugger.cpp
WEEK - 6/14-08-25/debug/: counter.cpp  counter.h  main.cpp  my_program
WEEK - 7/18-08-2025/my_project/: CMakeLists.txt
WEEK - 7/18-08-2025/my_project/src/: fib.cpp  main.cpp
WEEK - 7/18-08-2025/my_project/test/: fib_test.cpp  test_example.cpp
WEEK - 7/19-08-2025/Project/: CMakeLists.txt
WEEK - 7/19-08-2025/Project/src/: UserDefinedType.cpp  sayHello.cpp  stringcheck.cpp
WEEK - 7/19-08-2025/Project/test/: UserDefinedTypeTest.cpp  stringcheckTest.cpp  testHello.cpp
WEEK - 7/21-08-2025/Fixture/: CMakeLists.txt
WEEK - 7/21-08-2025/Fixture/include/: Account.h
WEEK - 7/21-08-2025/Fixture/src/: Account.cpp
WEEK - 7/21-08-2025/Fixture/test/: AccountTest.cpp
WEEK - 7/21-08-2025/MyProject/: CMakeLists.txt
WEEK - 8/25-08-2025/: Template.cpp
assignments/week1/: atof_assignment.cpp  pattern_assignment.cpp
assignments/week2/: division.h  implicit_main.cpp  multiplication.cpp
assignments/week2/project/: explicit_main.cpp  implicit_main.cpp
assignments/week3/: main.cpp
assignments/week3/include/: input_utils.h  matrix.h
assignments/week3/src/: input_utils.cpp  matrix.cpp
assignments/week4/: main.cpp
assignments/week4/include/: input_output_utils.h  input_utils.h  matrix.h
assignments/week4/src/: input_output_utils.cpp  input_utils.cpp  matrix.cpp
assignments/week5/: main.cpp
assignments/week5/include/: Account.h  AccountHolder.h  Admin.h  Bank.h  InputValidation.h  Transaction.h  User.h
assignments/week5/src/: Account.cpp  AccountHolder.cpp  Admin.cpp  Bank.cpp  InputValidation.cpp  Transaction.cpp  User.cpp
assignments/week6/: main.cpp
assignments/week6 /: main.cpp
assignments/week6 /data/: data.csv  product.csv  product.json  product.xml
assignments/week6 /include/: csvParser.h  fileParser.h  input.h  jsonParser.h  xmlParser.h
assignments/week6 /src/: csvParser.cpp  input.cpp  jsonParser.cpp  xmlParser.cpp
assignments/week6/data/: data.csv  data.json  data.xml
assignments/week6/include/: csvParser.h  fileParser.h  jsonParser.h  xmlParser.h
assignments/week6/src/: csvParser.cpp  jsonParser.cpp  xmlParser.cpp
assignments/week7/: CMakeLists.txt  main.cpp
assignments/week7/Banking_Simulation/: CMakeLists.txt  main.cpp
assignments/week7/Banking_Simulation/include/: Account.h  AccountHolder.h  Admin.h  Bank.h  InputValidation.h  TimeService.h  Transaction.h  User.h
assignments/week7/Banking_Simulation/include/interfaces/: IAccount.h  IBank.h  ITimeService.h
assignments/week7/Banking_Simulation/include/mocks/: MockBank.h  MockTimeService.h
assignments/week7/Banking_Simulation/src/: Account.cpp  AccountHolder.cpp  Admin.cpp  Bank.cpp  InputValidation.cpp  User.cpp
assignments/week7/Banking_Simulation/tests/: AccountHolderTest.cpp  AccountTest.cpp  AdminTest.cpp  BankTest.cpp  InputValidationTest.cpp  IntegrationTest.cpp  TransactionTest.cpp  UserTest.cpp
assignments/week7/include/: Account.h  AccountHolder.h  AccountInterface.h  Admin.h  Bank.h  BankInterface.h  MockAccount.h  MockBank.h  MockTransaction.h  Transaction.h  TransactionInterface.h
assignments/week7/include/interfaces/: IAccountHolder.h  IBank.h
assignments/week7/include/mocks/: MockAccount.h  MockAccountHolder.h  MockBank.h
assignments/week7/src/: Account.cpp  AccountHolder.cpp  Admin.cpp  Bank.cpp  InputValidation.cpp  TimeService.cpp  Transaction.cpp
assignments/week7/tests/: AccountHolderTest.cpp  AccountTest.cpp  AdminTest.cpp  InputValidationTest.cpp  TransactionTest.cpp  UserTest.cpp
assignments/week8/: CMakeLists.txt  main.cpp
assignments/week8/Mocks/: MockAudioPlayer.h  MockPlaylist.h  MockSong.h
assignments/week8/Tests/: MusicPlayerTest.cpp  PlaylistManagerTest.cpp  PlaylistTest.cpp  SongTest.cpp
assignments/week8/include/: IAudioPlayer.h  IMusicPlayer.h  IMusicPlaylistSystem.h  IPlaylist.h  IPlaylistManager.h  ISong.h  InputValidation.h  MusicPlayer.h  MusicPlaylistSystem.h  Playlist.h  PlaylistManager.h  SFMLAudioPlayer.h  Song.h
assignments/week8/src/: InputValidation.cpp  MusicPlayer.cpp  MusicPlaylistSystem.cpp  Playlist.cpp  PlaylistManager.cpp  SFMLAudioPlayer.cpp  Song.cpp
(+21 files in other folders)
